--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body{
     text-align: center;
     align-items: center;
     min-width: 100vw;
+    gap: 20px;
 }
 
 :root{
@@ -50,7 +51,7 @@ label{
     font-size:larger;
     margin-right: 5px;
     font-weight: 600;
-    padding: 0.5rem;
+    padding: 0.3rem;
     font-style: bold;
     color: solid black;
 }
@@ -59,24 +60,26 @@ label{
     background: var(--primary_color);
     border: none;
     color: #fff;
-    padding: 0.5rem;
+    padding: 1rem;
     border-radius: 3rem;
     font-size: large;
     cursor: pointer;
     outline: #fff;
-    margin: auto;
-    display: block;
+    margin: 1rem;
+    /* display: block; */
 
 }
-.input{
-    font-size: 14px;
+input{
+    cursor: pointer;
+    display:flex;
+    /* font-size: 1px; */
     outline: #fff;
-    padding: 0.6rem 1rem;
-    margin: 1rem;
+    padding: 1rem;
+    margin: 2.5em;
     border: 2px solid var(--primary_color);
-    border-radius: 0.5rem;
-    width: 100%;
-    max-width: 300px;
+    border-radius: 1rem;
+    width: 30%;
+    max-width: 500px;
     margin-left: auto;
     margin-right: auto;
     /* text-align: center; */
@@ -87,11 +90,6 @@ label{
     
 }
 
-.input-label{
-    display: block;
-    font-size: large;
-    font-weight: 600;
-}
 
 caption{
     display: table-caption;
@@ -142,6 +140,7 @@ th{
 
 }
 footer{
+    margin: 2rem;
     text-align: center;
 }
 
@@ -156,6 +155,7 @@ footer p{
 
 a, img, li{
     display: inline;
+    padding:2px;
 }
 
 a{
